linking stylesheet to this page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  
+  <! -- linking the style.css to index.html -->
+   <link rel="stylesheet" type = "text/css" href="style.css">
+  
   <title>
     MenPal
   </title>
