--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <! -- linking the style.css to index.html -->
    <link rel="stylesheet" type = "text/css" href="style.css">
   
-  <title>
-    MenPal
-  </title>
+  <head>
+    <title> MenPal </title>
+  </head>
   
   <body>
     <h1>This is my website</h1>
