wrote head, not header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <! -- linking the style.css to index.html -->
    <link rel="stylesheet" type = "text/css" href="style.css">
   
-  <head>
+  <header>
     <title> MenPal </title>
-  </head>
+  </header>
   
   <body>
     <h1>This is my website</h1>
